# ore-kernel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  ROADMAP.md  ore.toml
docs/: README.md  api-reference.md  architecture.md  cli-reference.md  configuration.md  extending-ore.md  getting-started.md  manifest-reference.md  security-model.md
docs/kernel-internals/: README.md  context-firewall.md  gpu-scheduler.md  hardware-abstraction-layer.md  ipc-and-semantic-bus.md  native-candle-engine.md  ssd-pager.md
examples/: README.md  ore_client.py
examples/01_simple_bot/: README.md  bot.py
examples/02_semantic_swarm/: README.md  scraper_agent.py  writer_agent.py
examples/03_stateful_chat/: README.md  chat.py
examples/04_agent_messaging/: README.md  receiver.py  sender.py
examples/05_firewall_demo/: README.md  firewall_test.py
manifests/: agent_alpha.toml  cyber_agent.toml  cyber_spider.toml  openclaw.toml  pipeline_analyst.toml  pipeline_researcher.toml  terminal_user.toml  web_scrapper.toml  web_tool.toml  web_toolkit.toml  writer_agent.toml
ore-cli/: Cargo.toml
ore-cli/src/: cli.rs  interactive.rs  main.rs  utils.rs
ore-common/: Cargo.toml
ore-core/: Cargo.toml
ore-core/src/: driver.rs  firewall.rs  ipc.rs  lib.rs  registry.rs  scheduler.rs  swap.rs
ore-core/src/native/: engine.rs  gguf_tokenizer.rs  mod.rs
ore-core/src/native/models/: bert.rs  llama.rs  mod.rs  nomic.rs  qwen.rs
ore-core/src/native/models/utils/: mod.rs  with_tracing.rs
ore-server/: Cargo.toml  ore-kernel.token
swap/: openclaw.page
(+34 files in other folders)
