[workspace]
resolver = "2"
members = [
    "ore-common",
    "ore-core",
    "ore-server",
    "ore-cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mahavishnu-K"]
license = "MIT"
repository = "https://github.com/Mahavishnu-K/ore-kernel"
description = "The Operating System for Local Intelligence. ⚙️"

# Optimize release builds for speed
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true