[package]
name = "ore-kernel"
version = "0.0.1"
edition = "2024"
description = "The CLI tool for the ORE AI Kernel."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mahavishnu-K/ore-kernel"
keywords = ["ai", "kernel", "llm", "local-ai", "cli"] 
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
